// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`MetadataContainer deep snapshot should render correctly for news 1`] = `null`;

exports[`MetadataContainer deep snapshot should render correctly for persian 1`] = `null`;

exports[`MetadataContainer no data should render null 1`] = `null`;

exports[`MetadataContainer should render correctly for news 1`] = `
<Context.Provider
  value={
    Object {
      "articleAuthor": "https://www.facebook.com/bbcnews",
      "brandName": "BBC News",
      "defaultImage": "https://www.bbc.co.uk/news/special/2015/newsspec_10857/bbc_news_logo.png?cb=1",
      "defaultImageAltText": "BBC News",
      "locale": "en_GB",
      "service": "news",
      "serviceName": "News",
      "twitterCreator": "@BBCNews",
      "twitterSite": "@BBCNews",
    }
  }
>
  <MetadataContainer
    isAmp={false}
    metadata={
      Object {
        "created": 1514808060000,
        "createdBy": "",
        "firstPublished": 1514808060000,
        "id": "urn:bbc:ares::article:c0000000001o",
        "lastPublished": 1514811600000,
        "lastUpdated": 1514811600000,
        "locators": Object {
          "optimoUrn": "urn:bbc:optimo:asset:c0000000001o",
        },
        "passport": Object {
          "category": "news",
          "genre": null,
          "home": "http://www.bbc.co.uk/ontologies/passport/home/Persian",
          "language": "en-gb",
        },
        "tags": Object {},
        "type": "article",
      }
    }
    promo={
      Object {
        "headlines": Object {
          "promoHeadline": "Article Headline for Promo",
          "seoHeadline": "Article Headline for SEO",
        },
        "id": "urn:bbc:ares::article:c0000000001o",
        "locators": Object {
          "optimoUrn": "urn:bbc:optimo:asset:c0000000001o",
        },
        "summary": "Article summary.",
        "timestamp": 1514811600000,
      }
    }
    service="news"
  />
</Context.Provider>
`;

exports[`MetadataContainer should render correctly for persian 1`] = `
<Context.Provider
  value={
    Object {
      "articleAuthor": "https://www.facebook.com/bbcnews",
      "brandName": "BBC News فارسی",
      "defaultImage": "https://news.files.bbci.co.uk/ws/img/logos/og/persian.png",
      "defaultImageAltText": "BBC News فارسی",
      "locale": "fa",
      "service": "persian",
      "serviceName": "Persian",
      "twitterCreator": "@bbcpersian",
      "twitterSite": "@bbcpersian",
    }
  }
>
  <MetadataContainer
    isAmp={false}
    metadata={
      Object {
        "created": 1514808060000,
        "createdBy": "",
        "firstPublished": 1514808060000,
        "id": "urn:bbc:ares::article:c0000000028o",
        "lastPublished": 1514811600000,
        "lastUpdated": 1514811600000,
        "locators": Object {
          "optimoUrn": "urn:bbc:optimo:asset:c0000000028o",
        },
        "passport": Object {
          "category": "news",
          "genre": null,
          "home": "http://www.bbc.co.uk/ontologies/passport/home/Persian",
          "language": "fa",
        },
        "tags": Object {},
        "type": "article",
      }
    }
    promo={
      Object {
        "headlines": Object {
          "promoHeadline": "سرصفحه مقاله برای ارتقاء",
          "seoHeadline": "سرصفحه مقاله",
        },
        "id": "urn:bbc:ares::article:c0000000028o",
        "locators": Object {
          "optimoUrn": "urn:bbc:optimo:asset:c0000000028o",
        },
        "summary": "خلاصه مقاله",
        "timestamp": 1514811600000,
      }
    }
    service="persian"
  />
</Context.Provider>
`;
